# app/Models/User.php
@@ -8,6 +8,21 @@ use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 use Spatie\Permission\Traits\HasRoles;
 
+/**
+ * @OA\Schema(
+ *     schema="User",
+ *     type="object",
+ *     title="Usuário",
+ *     required={"id", "full_name", "username", "email"},
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="full_name", type="string", example="João da Silva"),
+ *     @OA\Property(property="username", type="string", example="joaosilva"),
+ *     @OA\Property(property="email", type="string", format="email", example="joao@example.com"),
+ *     @OA\Property(property="birth_date", type="string", format="date", example="1990-01-01"),
+ *     @OA\Property(property="created_at", type="string", format="date-time", example="2024-05-01T10:00:00Z"),
+ *     @OA\Property(property="updated_at", type="string", format="date-time", example="2024-05-20T14:45:00Z")
+ * )
+ */
 class User extends Authenticatable
 {
     use HasApiTokens, HasFactory, Notifiable, HasRoles;
